--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet">
+      
     <title>Books Reading App</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
