--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@300;400;500;600;700;800&family=Open+Sans:wght@700&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet">
-      
+
     <title>Books Reading App</title>
 
     <!-- Start Single Page Apps for GitHub Pages -->
@@ -64,6 +64,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="modal-root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
